// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "566f622048ef50518e655a496205d06b736c9b119ed2acbfb8c46992cb161c31",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "95ab371aac1dded62b0d9226f45f284a3768101bf44a00db2fe0e1b49567c1be",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "a7a8d3610066ccdfc51b53cd31adb5887a40667f5fef5fe5554fa322a1e121f8",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "054c25fdb7cf23d3d6456fa83bdad091fee3f0e65cbd737f6d7c7de14fbd8c87",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "32fb227c74049dc8a98651d3599f366fdc89bcde21a23a391a681c29131ca141",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "d631d68002504291fd43a80ba55f42dba493bc056180572bf8c4cb0498a7d184",
  "floor": 10,
  "status": "won",
  "turn": 885,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "42f0c7c49793d1f102c15853428583b2509eb4cde3de75bc06dbb7ac82d859c1",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "c5995e9f0b6ed2ffce28afc70a3c33d29907698599b1f157fce38284045d2a5c",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "64ee621c2c2dae3a302beddfd297a957b3ed96905b209a6cf14fffc6bc3efd78",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "c9eb74e3ff92079dce76f9cf48e36149e5715ae87544ef92347862855200b0c7",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "3ca8490994c0ad8257357c396227b218a8c899e25728be5cf9caeb6b98020402",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "09cc216a14e6b1aec6d2ebda74d4a98e19e4fa30b7d7a29d10c95eb1a1f0a4bb",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "cd5e63e7b382e7bc6397b071fffe907ab998816c798fd0f4b4ee56c45e92fc2b",
  "floor": 10,
  "status": "won",
  "turn": 864,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "b89649dbd6f8d1f74144aaa295ca2c5d89b0397cfb494c5f98306578f8fc44dc",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;
